[gd_scene load_steps=14 format=3 uid="uid://gm0pc5hjqj2c"]

[ext_resource type="Texture2D" uid="uid://c1uwuu2jtrwgl" path="res://assets/art/props/soccer-ball.png" id="1_oqv3d"]
[ext_resource type="Script" uid="uid://8wobq71gnbyk" path="res://scenes/ball/ball.gd" id="1_stoaj"]
[ext_resource type="Texture2D" uid="uid://cclfdbua3ji85" path="res://assets/art/props/ball-shadow.png" id="2_nv6q1"]
[ext_resource type="Texture2D" uid="uid://bms5ajb71mdgm" path="res://assets/art/particles/white-circle.png" id="2_xotqv"]

[sub_resource type="Curve" id="Curve_jbgth"]
_data = [Vector2(0.030303031, 0.26966298), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yjhvv"]
curve = SubResource("Curve_jbgth")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a81tc"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 0, 0)
scale_min = 0.19999999
scale_max = 0.39999998
scale_curve = SubResource("CurveTexture_yjhvv")

[sub_resource type="CircleShape2D" id="CircleShape2D_nv6q1"]
radius = 5.0

[sub_resource type="Animation" id="Animation_nv6q1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oqv3d"]
resource_name = "idle"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_stoaj"]
resource_name = "roll"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xotqv"]
_data = {
&"RESET": SubResource("Animation_nv6q1"),
&"idle": SubResource("Animation_oqv3d"),
&"roll": SubResource("Animation_stoaj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_stoaj"]
radius = 4.0

[node name="Ball" type="AnimatableBody2D"]
collision_layer = 4
collision_mask = 33
sync_to_physics = false
script = ExtResource("1_stoaj")
friction_air = 35.0
friction_ground = 250.0

[node name="ShotPaarticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -8)
emitting = false
amount = 32
texture = ExtResource("2_xotqv")
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_a81tc")

[node name="BallSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_oqv3d")
centered = false
offset = Vector2(-5, -10)
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_nv6q1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xotqv")
}
autoplay = "idle"

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_nv6q1")
centered = false
offset = Vector2(-8, -16)

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_stoaj")

[node name="ScoringRayCast" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(80, 0)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false
